--- a/yolo.ipynb
+++ b/yolo.ipynb
@@ -633,6 +633,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 검증"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
@@ -860,7 +867,7 @@
    ],
    "source": [
     "from ultralytics import YOLO\n",
-    "model = YOLO(\"/home/taeyoung3060/바탕화면/yolov8-face-carPlate/runs/detect/train33/weights/best.pt\")\n",
+    "model = YOLO(\"best.pt\")\n",
     "model.val(data=\"dataset.yaml\", batch=24, imgsz=640, conf=0.001, iou=0.6)"
    ]
   },
@@ -890,7 +897,7 @@
     "from ultralytics import YOLO\n",
     "import cv2\n",
     "\n",
-    "model = YOLO(\"/home/taeyoung3060/바탕화면/yolov8-face-carPlate/runs/detect/train13/weights/best.pt\")\n",
+    "model = YOLO(\"best.pt\")\n",
     "\n",
     "results = model.predict(\"image_test.jpg\")\n",
     "\n",
@@ -1757,10 +1764,10 @@
     "from ultralytics.utils.plotting import Annotator, colors\n",
     "import cv2\n",
     "\n",
-    "model = YOLO(\"/home/taeyoung3060/바탕화면/yolov8-face-carPlate/runs/detect/train13/weights/best.pt\")\n",
+    "model = YOLO(\"best.pt\")\n",
     "names = model.names\n",
     "\n",
-    "cap = cv2.VideoCapture(\"test_video1.mp4\")\n",
+    "cap = cv2.VideoCapture(\"test_video.mp4\")\n",
     "assert cap.isOpened(), \"Error reading video file\"\n",
     "w, h, fps = (int(cap.get(x)) for x in (cv2.CAP_PROP_FRAME_WIDTH, cv2.CAP_PROP_FRAME_HEIGHT, cv2.CAP_PROP_FPS))\n",
     "\n",
@@ -1768,7 +1775,7 @@
     "blur_ratio = 50\n",
     "\n",
     "# Video writer\n",
-    "video_writer = cv2.VideoWriter(\"test_video1_result.mp4\",\n",
+    "video_writer = cv2.VideoWriter(\"test_video_result.mp4\",\n",
     "                               cv2.VideoWriter_fourcc(*'mp4v'),\n",
     "                               fps, (w, h))\n",
     "\n",
